k8s/service-a-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-deployment
  labels:
    name: service-a-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - image: krishkumar4400/service-a:latest
          name: service-a-container
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 3000
              name: service-a-port
