k8s/service-b-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deployment
  labels:
    name: service-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - image: krishkumar4400/service-b:latest
          name: service-b-container
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 3000
              name: service-b-port
