k8s/service-c-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c-deployment
  labels:
    name: service-c-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
        - image: krishkumar4400/service-c:latest
          name: service-c-container
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 5173
              name: service-c-port
