k8s/service-a.yml
kind: Service
apiVersion: v1
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3000
