k8s/service-c.yml
kind: Service
apiVersion: v1
metadata:
  name: service-c
spec:
  selector:
    app: service-c
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5173
