k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressController: nginx
  rules:
    selector:
      app: service-c
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-c
            port: 
              number: 80
